// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AtButton.vue render AtButton -- props circle 1`] = `
<view
  class="at-button--normal at-button--circle at-button"
>
  <!-- web button -->
  <button
    class="at-button__wxbutton"
    lang="lang"
  />
  <!-- weapp button -->
  <!--v-if-->
  <!-- alipay button -->
  <!--v-if-->
  <!-- loading && icon -->
  <!--v-if-->
  <!-- button text slot -->
  <view
    class="at-button__text"
  >
    
    按钮
    
  </view>
</view>
`;

exports[`AtButton.vue render AtButton -- props disabled 1`] = `
<view
  class="at-button--normal at-button--disabled at-button"
>
  <!-- web button -->
  <!--v-if-->
  <!-- weapp button -->
  <!--v-if-->
  <!-- alipay button -->
  <!--v-if-->
  <!-- loading && icon -->
  <!--v-if-->
  <!-- button text slot -->
  <view
    class="at-button__text"
  >
    
    按钮
    
  </view>
</view>
`;

exports[`AtButton.vue render AtButton -- props full 1`] = `
<view
  class="at-button--normal at-button--full at-button"
>
  <!-- web button -->
  <button
    class="at-button__wxbutton"
    lang="lang"
  />
  <!-- weapp button -->
  <!--v-if-->
  <!-- alipay button -->
  <!--v-if-->
  <!-- loading && icon -->
  <!--v-if-->
  <!-- button text slot -->
  <view
    class="at-button__text"
  >
    
    按钮
    
  </view>
</view>
`;

exports[`AtButton.vue render AtButton -- props loading 1`] = `
<view
  class="at-button--normal at-button--icon at-button"
>
  <!-- web button -->
  <button
    class="at-button__wxbutton"
    lang="lang"
  />
  <!-- weapp button -->
  <!--v-if-->
  <!-- alipay button -->
  <!--v-if-->
  <!-- loading && icon -->
  <view
    class="at-button__icon"
  >
    <view
      class="at-loading"
    >
      
      <view
        class="at-loading__ring"
      />
      <view
        class="at-loading__ring"
      />
      <view
        class="at-loading__ring"
      />
      
    </view>
  </view>
  <!-- button text slot -->
  <view
    class="at-button__text"
  >
    
    按钮
    
  </view>
</view>
`;

exports[`AtButton.vue render AtButton -- props size(normal) 1`] = `
<view
  class="at-button--normal at-button"
>
  <!-- web button -->
  <button
    class="at-button__wxbutton"
    lang="lang"
  />
  <!-- weapp button -->
  <!--v-if-->
  <!-- alipay button -->
  <!--v-if-->
  <!-- loading && icon -->
  <!--v-if-->
  <!-- button text slot -->
  <view
    class="at-button__text"
  >
    
    按钮
    
  </view>
</view>
`;

exports[`AtButton.vue render AtButton -- props size(primary) 1`] = `
<view
  class="at-button"
>
  <!-- web button -->
  <button
    class="at-button__wxbutton"
    lang="lang"
  />
  <!-- weapp button -->
  <!--v-if-->
  <!-- alipay button -->
  <!--v-if-->
  <!-- loading && icon -->
  <!--v-if-->
  <!-- button text slot -->
  <view
    class="at-button__text"
  >
    
    按钮
    
  </view>
</view>
`;

exports[`AtButton.vue render AtButton -- props size(secondary) 1`] = `
<view
  class="at-button"
>
  <!-- web button -->
  <button
    class="at-button__wxbutton"
    lang="lang"
  />
  <!-- weapp button -->
  <!--v-if-->
  <!-- alipay button -->
  <!--v-if-->
  <!-- loading && icon -->
  <!--v-if-->
  <!-- button text slot -->
  <view
    class="at-button__text"
  >
    
    按钮
    
  </view>
</view>
`;

exports[`AtButton.vue render AtButton -- props size(small) 1`] = `
<view
  class="at-button--small at-button"
>
  <!-- web button -->
  <button
    class="at-button__wxbutton"
    lang="lang"
  />
  <!-- weapp button -->
  <!--v-if-->
  <!-- alipay button -->
  <!--v-if-->
  <!-- loading && icon -->
  <!--v-if-->
  <!-- button text slot -->
  <view
    class="at-button__text"
  >
    
    按钮
    
  </view>
</view>
`;
